--- a/views/index.ejs
+++ b/views/index.ejs
@@ -28,7 +28,7 @@
         <% product.forEach(function(e){%>
          <tr>
               <td><a href="/show/<%=e.name%>/data"><%=e.name%></a></td>
-              <td><%=e.quantity%></td>
+              <td><%=e.data.length%></td>
               <td><%=e.instock%></td>
 
           </tr>
