--- a/views/addproductdata.ejs
+++ b/views/addproductdata.ejs
@@ -49,6 +49,7 @@
                 <div class="relative">
                   <select class="block appearance-none w-full bg-gray-200 border border-gray-200 text-white-700 py-3 px-4 pr-8 rounded leading-tight focus:outline-none text-zinc-800 focus:bg-white focus:border-gray-500" id="grid-state" name="productdataml">
                     <option value="300">300 ml</option>
+                    <option value="330">330 ml</option>
                     <option value="345">345 ml</option>
                     <option value="500">500 ml</option>
                     <option value="1000">1000 ml</option>
