--- a/views/addproductdata.ejs
+++ b/views/addproductdata.ejs
@@ -48,6 +48,7 @@
                 </label>
                 <div class="relative">
                   <select class="block appearance-none w-full bg-gray-200 border border-gray-200 text-white-700 py-3 px-4 pr-8 rounded leading-tight focus:outline-none text-zinc-800 focus:bg-white focus:border-gray-500" id="grid-state" name="productdataml">
+                    <option value="250">250 ml</option>
                     <option value="300">300 ml</option>
                     <option value="330">330 ml</option>
                     <option value="345">345 ml</option>
