--- a/views/addproductdata.ejs
+++ b/views/addproductdata.ejs
@@ -52,6 +52,7 @@
                     <option value="300">300 ml</option>
                     <option value="330">330 ml</option>
                     <option value="345">345 ml</option>
+                    <option value="355">355 ml</option>
                     <option value="500">500 ml</option>
                     <option value="1000">1000 ml</option>
                     <option value="1250">1250 ml</option>
