--- a/views/addproductdata.ejs
+++ b/views/addproductdata.ejs
@@ -48,6 +48,7 @@
                 </label>
                 <div class="relative">
                   <select class="block appearance-none w-full bg-gray-200 border border-gray-200 text-white-700 py-3 px-4 pr-8 rounded leading-tight focus:outline-none text-zinc-800 focus:bg-white focus:border-gray-500" id="grid-state" name="productdataml">
+                    <option value="250">240 ml</option>
                     <option value="250">250 ml</option>
                     <option value="300">300 ml</option>
                     <option value="330">330 ml</option>
@@ -59,6 +60,7 @@
                     <option value="1500">1500 ml</option>
                     <option value="2000">2000 ml</option>
                     <option value="2250">2250 ml</option>
+                    <option value="2250">6000 ml</option>
 
                   </select>
                   <div class="pointer-events-none absolute inset-y-0 right-0 flex items-center px-2 text-gray-700">
