--- a/views/addproductdata.ejs
+++ b/views/addproductdata.ejs
@@ -34,7 +34,7 @@
                   <select class="block appearance-none w-full bg-gray-200 border border-gray-200 text-white-700 py-3 px-4 pr-8 rounded leading-tight focus:outline-none text-zinc-800 focus:bg-white focus:border-gray-500" id="grid-state" name="productdatatype">
                     <option value="bottle">Bottle</option>
                     <option value="can">Can</option>
-                    <option value="can">Tetra</option>
+                    <option value="tetra">Tetra</option>
    
 
                   </select>
