--- a/views/editproductdata.ejs
+++ b/views/editproductdata.ejs
@@ -34,6 +34,7 @@
                   <select class="block appearance-none w-full bg-gray-200 border border-gray-200 text-white-700 py-3 px-4 pr-8 rounded leading-tight focus:outline-none text-zinc-800 focus:bg-white focus:border-gray-500" id="grid-state" name="editdatatype">
                     <option value="bottle">Bottle</option>
                     <option value="can">Can</option>
+                    <option value="tetra">Tetra</option>
    
 
                   </select>
@@ -48,13 +49,19 @@
                 </label>
                 <div class="relative">
                   <select class="block appearance-none w-full bg-gray-200 border border-gray-200 text-white-700 py-3 px-4 pr-8 rounded leading-tight focus:outline-none text-zinc-800 focus:bg-white focus:border-gray-500" id="grid-state" name="editdataml">
+                    <option value="250">240 ml</option>
+                    <option value="250">250 ml</option>
+                    <option value="300">300 ml</option>
+                    <option value="330">330 ml</option>
                     <option value="345">345 ml</option>
+                    <option value="355">355 ml</option>
                     <option value="500">500 ml</option>
                     <option value="1000">1000 ml</option>
                     <option value="1250">1250 ml</option>
                     <option value="1500">1500 ml</option>
                     <option value="2000">2000 ml</option>
                     <option value="2250">2250 ml</option>
+                    <option value="2250">6000 ml</option>
 
                   </select>
                   <div class="pointer-events-none absolute inset-y-0 right-0 flex items-center px-2 text-gray-700">
